@@ -1,13 +1,29 @@
-/* mpn_rawrandom (rp, nbits, state) -- FIXME: document func. */
-/* FIXME: add fsf blurb */
+/* mpn_rawrandom (rp, nbits, state) -- Generate a random bitstream of
+   length NBITS in RP.  RP must have enough space allocated to hold
+   NBITS.
+
+Copyright (C) 1999 Free Software Foundation, Inc.
+
+This file is part of the GNU MP Library.
+
+The GNU MP Library is free software; you can redistribute it and/or modify
+it under the terms of the GNU Library General Public License as published by
+the Free Software Foundation; either version 2 of the License, or (at your
+option) any later version.
+
+The GNU MP Library is distributed in the hope that it will be useful, but
+WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
+or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Library General Public
+License for more details.
+
+You should have received a copy of the GNU Library General Public License
+along with the GNU MP Library; see the file COPYING.LIB.  If not, write to
+the Free Software Foundation, Inc., 59 Temple Place - Suite 330, Boston,
+MA 02111-1307, USA. */
 
 #include "gmp.h"
 #include "gmp-impl.h"
 #include "longlong.h"		/* for count_leading_zeros() */
-
-/* Generate a random bitstream of length NBITS in RP. */
-
-/* RP must have enough space allocated to hold NBITS. */
 
 void
 #if __STDC__
@@ -21,52 +37,46 @@ mpn_rawrandom (rp, nbits, s)
 {
   mp_ptr tp, seedp, ap, mp, mcopyp, sump, dstp;
   mp_size_t tsize, rpsize, seedsize, asize, msize, sumsize, n;
-  unsigned shiftcount;		/* FIXME: type? */
-  unsigned genbits;
-  mp_size_t nlimbs;
-  mp_limb_t tlimb;		/* temp */
-  
+  mp_size_t shiftcount, savecount, genbits;
+  mp_limb_t tlimb;
+  TMP_DECL (mark);
 
+  
   seedp = PTR (s->seed);
   ap = PTR (s->data.lc->a);
   asize = SIZ (s->data.lc->a);
   mp = PTR (s->data.lc->m);
   msize = SIZ (s->data.lc->m);
-#if 0
-  MPN_NORMALIZE (mp, msize);	/* FIXME: Callers responsibility? */
-#endif
   rpsize = nbits / BITS_PER_MP_LIMB + (nbits % BITS_PER_MP_LIMB != 0);
-
-  TMP_DECL (mark);
-
-
   MPN_ZERO (rp, rpsize);	/* Clear destination. */
 
   /* Temporary areas and their maximum sizes:
      tp = seed*a -- SIZ(m)+SIZ(a) [since seed can grow up to the size of m]
      sump = seed*a + c -- SIZ(tp) + 2 [one for c and one for shifting left]
-     mcopyp = shifted m -- SIZ(m)
-  */
+     mcopyp = shifted m -- SIZ(m) */
      
   TMP_MARK (mark);
   tsize = msize + asize;
   tp = TMP_ALLOC (tsize * BYTES_PER_MP_LIMB); 
   sump = TMP_ALLOC ((2 + tsize) * BYTES_PER_MP_LIMB);
-  mcopyp = TMP_ALLOC (msize * BYTES_PER_MP_LIMB);
 
   /* mpn_divrem() documentation: "It is required that the most
-     significant bit of the divisor is set." */
-  /* Normalize m (shift left) and store in mcopyp. */
-  /* Assumption: m != 0 */
+     significant bit of the divisor is set."  Normalize m (shift left)
+     and store in mcopyp.  Assumption: m != 0 */
+
   count_leading_zeros (shiftcount, mp[msize - 1]); 
   if (shiftcount)
-    mpn_lshift (mcopyp, mp, msize, shiftcount);
+    {
+      mcopyp = TMP_ALLOC (msize * BYTES_PER_MP_LIMB);
+      mpn_lshift (mcopyp, mp, msize, shiftcount);
+    }
+  else
+    mcopyp = mp;
 
-  nlimbs = rpsize;
+  /* rp = (seed * a + c) % m */
   dstp = rp;
-  genbits = 0;
-  /* rop = (seed * a + c) % m */
-  while (genbits < nbits)
+  genbits = savecount = 0;
+  while (1)
     {
       seedsize = SIZ (s->seed);
       if (seedsize >= asize)
@@ -93,42 +103,54 @@ mpn_rawrandom (rp, nbits, s)
 	}
 
       mpn_divrem (sump + msize, 0, sump, sumsize, mcopyp, msize);
-      /* Now remainder is in sump, size is msize. */
-      sumsize = msize;		/* FIXME: Convenient. */
+      sumsize = msize;		/* Now remainder is in sump, size is
+                                   msize. */
 
       /* Shift down remainder. */
       if (shiftcount)
-	mpn_rshift (sump, sump, sumsize, shiftcount);
-      MPN_NORMALIZE (sump, sumsize);
+	{
+	  mpn_rshift (sump, sump, sumsize, shiftcount);
+	  MPN_NORMALIZE (sump, sumsize);
+	}
 
       /* Save result as next seed.  Make sure it's space for it. */
       if (sumsize > SIZ (s->seed))
-	  _mpz_realloc (s->seed, sumsize);
+	_mpz_realloc (s->seed, sumsize);
       MPN_COPY (PTR (s->seed), sump, sumsize);
       SIZ (s->seed) = sumsize;
 
+      if (savecount)		/* Save some bits? */
+	{			
+	  sump[sumsize] = mpn_lshift (sump, sump, sumsize, savecount);
+	  sumsize++;
+	  tlimb = *dstp & (~(mp_limb_t) 0 >> (BITS_PER_MP_LIMB - savecount));
+	}
+
+      /* Store result at destination. */
       MPN_COPY (dstp, sump, sumsize);
 
-      /* We have now generated s->size (SIZE) number of bits.  If
-      NBITS > SIZE, we take another round and generate another SIZE
-      number of bits, *overwriting* the X most significant bits of the
-      result from this round.  (Not too efficient!  In worst case,
-      we'll only generate 1 bit per round.  FIXME.) X is in this case
-      NBITS % BITS_PER_MP_LIMB.  */
+      /* Restore `savecount' lower bits of tlimb in *dstp. */
+      if (savecount)
+	{
+	  *dstp &= (~(mp_limb_t) 0 >> (BITS_PER_MP_LIMB - savecount));
+	  *dstp |= tlimb;
+	}
 
-      if (genbits)
-	genbits -= nbits % BITS_PER_MP_LIMB;
       genbits += s->size;
+
+      if (genbits < nbits)
+	{			/* Another round. */
+	  savecount = genbits % BITS_PER_MP_LIMB;
+	  dstp += sumsize;
+	}
+      else
+	break;			/* Done. */
     }
 
-
-  /* Mask off excess bits. */
-  /* If we shift down, discarding least signifant bits, I *think* that
-     we are making a mistake.  I don't think the numbers are
-     universally distributed. */
-  n = genbits % nbits;
+  /* Mask off excess bits.  Save least significant bits. */
+  n = nbits % BITS_PER_MP_LIMB;
   if (n)
-    rp[rpsize - 1] &= (~(mp_limb_t) 0) >> (BITS_PER_MP_LIMB - n);
+    rp[rpsize - 1] &= ((~(mp_limb_t) 0) >> (BITS_PER_MP_LIMB - n));
 
   TMP_FREE (mark);
 }
